k8s/deployments/sciviz/public/pharus/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pharus-deployment
  labels:
    app: pharus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pharus
  template:
    metadata:
      labels:
        app: pharus
    spec:
      containers:
      - name: pharus
        image: jverswijver/pharus:0.4.2-prerelease-2
        volumeMounts:
          - name: spec
            mountPath: "/main/specs/"
            readOnly: true
        command: ["/bin/sh"]
        args: ["-c","pwd; pharus"]
      volumes:
      - name: spec
        configMap:
          name: sci-viz-config
...
